chore(docs): Clean up

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,6 +1,6 @@
 
 <header class="site-header">
-  <nav class="navbar navbar-default  navbar-inverse">
+  <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <a id="logo" href="{{ site.baseurl }}/">
