--- a/docs/index.haml
+++ b/docs/index.haml
@@ -41,10 +41,9 @@ layout: default
       %p Not blaming anyone here. Building a good search for a documentation is a complex challenge. We happen to have a lot of experience doing that, and we want to share it with the world. For free.
   #section_examples.page-section.page-section-dark
     .container
-      .row
-        .col-sm-10.col-sm-offset-1
-          %h2.page-section-title DocSearch is live
-          %p We’ve integrated DocSearch into several open source projects. Take a look.
+      .text-center
+        %h2.page-section-title DocSearch is live
+        %p We’ve integrated DocSearch into several open source projects. Take a look.
       .row
         .col-sm-4.showcase
           %a{:href => "https://bootstrap.algolia.com", :target => "_blank"}
@@ -99,13 +98,10 @@ layout: default
           %p We’ll send you a few lines to code to integrate Algolia autocomplete and power your search.
           %p You will receive the same speed, relevance and best-in-class UX as our paying customers.
   #section_get-started.page-section.page-section-dark
-    .container
-      .row
-        .col-sm-10.col-sm-offset-1
-          %h2.page-section-title Get started
-          %p Add the url of your documentation site and your email to the form at the top of the page. We’ll get back to you with what you need to integrate your new search into   your website.
-          %p Don’t forget, DocSearch is completely free! There’s no need to sign up for Algolia or submit any payment information. Let’s tackle document search together.
-          .spacer30
+    .m800
+      %h2.page-section-title Get started
+      %p Add the url of your documentation site and your email to the form at the top of the page. We’ll get back to you with what you need to integrate your new search into   your website.
+      %p Don’t forget, DocSearch is completely free! There’s no need to sign up for Algolia or submit any payment information. Let’s tackle document search together.
 
 <script src="js/animation.js"></script>
 
