--- a/docs/css/_home.scss
+++ b/docs/css/_home.scss
@@ -25,55 +25,18 @@ html, body {
   .navbar {
     border-radius: 0;
     border: none;
+    background-color: #0B1724;
     .navbar-header {
       position: relative;
       height: 50px;
       font-size: 16px;
-      line-height: 50px;
-    }
-    .navbar-toggle {
-      background-color: #1d96c7;
-      border: solid 1px #1d96c7;
-      color: white;
-      &.collapsed {
-        background-color: transparent;
-        border: solid 1px rgba(255, 255, 255, 0.4);
-        color: white;
-      }
+      line-height: 50px
     }
     .navbar-nav > li > a {
       padding-bottom: 0;
     }
-    .navbar-collapse.in {
-      background-color: #0B1724 !important;
-      animation: fadeInUp .2s ease-in-out;
-      position: fixed;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      padding: 20%;
-      font-size: 1.2em;
-      li {
-        padding-bottom: 1em;
-      }
-    }
   }
 }
-
-.site-header nav.navbar .navbar-nav > .active > a {
-  color: #1D96C7 !important;
-  background-color: transparent;
-}
-.site-header nav.navbar .navbar-nav > li > a.navbar-github-link {
-  font-size: 32px;
-  padding-top: 10px;
-}
-.site-header nav.navbar .navbar-nav > li > a.navbar-github-link:hover {
-  color: #46AEDA;
-  text-decoration: none;
-}
-
 
 /* JUMBOTRON
 // ------------------------- */
