docs(home): fix bg of index + rotation of docs

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -15,7 +15,7 @@ layout: default
         %p#top The easiest way to add search to your documentation.
       .jumbotron-left-column
         %div.index-container
-          %img.index{src: 'img/illus-index.png'}
+          %img.index{src: 'img/illus-index.svg'}
         %p We’ve created the fastest, easiest way to search within documentation.
         %p And best of all? It’s free!
       %form#join-form{action: '#', method: 'POST'}
