chore(docs): updated copy

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -38,8 +38,8 @@ layout: default
   #section_why.page-section
     .m800.m-l-r-auto
       %h2.page-section-title Why DocSearch?
-      %p We’re scratching our own itch here. As developers, we spend a lot of time reading documentation, and it isn’t always easy to find the information we need.
-      %p Not blaming anyone here. Building a good search for a documentation is a complex challenge. We happen to have a lot of experience doing that, and we want to share it with the world.
+      %p We're kind of scratching our own itch here. As developers, we spend a lot of time reading documentation, and it isn’t always easy to find the information we need.
+      %p No one's to blame, building a good search for a documentation is a complex challenge.  We just happen to have a lot of experience doing that, and we want to share it with the world.
   #section_examples.page-section.page-section-dark
     .container
       .text-center
@@ -116,10 +116,10 @@ layout: default
               %p We’ll send you a few lines to code to integrate Algolia autocomplete and power your search.
               %p You will receive the same speed, relevance and best-in-class UX as our paying customers.
   #section_get-started.page-section.page-section-dark
-    .m900.m-l-r-auto
+    .m600.m-l-r-auto
       %h2.page-section-title Get started
-      %p Add the url of your documentation site and your email to the form at the top of the page. We’ll get back to you with what you need to integrate your new search into   your website.
-      %p Don’t forget, DocSearch is completely free! There’s no need to sign up for Algolia or submit any payment information. Let’s tackle document search together.
+      %p We’ll get back to you within a few hours with everything you need to integrate your new search into your website.
+      %p Oh, and did we mention it's FREE? No commitment. No subscription. Everything is on us!
       .spacer30
       %form#join-form-2{action: '#', method: 'POST'}
         .input-group
