--- a/docs/css/_home.scss
+++ b/docs/css/_home.scss
@@ -133,14 +133,19 @@ html, body {
 .page-section {
   padding: 60px 0;
   font-size: 16px;
-  line-height: 1.8;
+  line-height: 1.6;
   color: #091724;
+  &.dark {
+    background-color: #091724;
+    color: #C7C4C4;
+    h2.page-section-title{
+      color: #FFF;
+    }
+  }
 }
-.page-section-dark {
-  background-color: #091724;
-  color: #C7C4C4;
-}
-h2.page-section-title {
+
+
+.page-section-title {
   font-size: 26px;
   text-transform: uppercase;
   font-weight: 600;
@@ -148,18 +153,16 @@ h2.page-section-title {
   margin-bottom: 30px;
   text-align: center;
   letter-spacing: 1px;
-}
-.page-section-dark h2.page-section-title{
-  color: #FFF;
+  &:after {
+    display: block;
+    content: '';
+    border-bottom: 3px solid #FF2E6C;
+    margin: 30px auto 33px;
+    width: 60px;
+  }
 }
 
-h2.page-section-title:after {
-  display: block;
-  content: '';
-  border-bottom: 3px solid #FF2E6C;
-  margin: 30px auto 33px;
-  width: 60px;
-}
+
 
 #section_why {
   padding-left: 20px;
@@ -182,18 +185,18 @@ h2.page-section-title:after {
   .showcase {
     margin-top: 40px;
     text-align: center;
-    img.logo {
+    .logo {
       display: inline-block;;
       height: 60px;
       margin-bottom: 20px;
     }
-    img.example {
+    .example {
       width: 100%;
     }
   }
   .screen-wrapper {
     position: relative;
-    figure.freezeframe-container {
+    .freezeframe-container {
 	    border-radius: 3px;
     }
     .screen-mask {
@@ -204,6 +207,20 @@ h2.page-section-title:after {
     &:hover .screen-mask{
       display: none;
     }
+  }
+  .placeholder-logo {
+    border: #666 2px dashed;
+    width: 64px;
+    height: 64px;
+    border-radius: 4px;
+    margin: 0 auto;
+  }
+  .placeholder-screen {
+    border: #666 2px dashed;
+    margin-top: 16px;
+    width: 100%;
+    height: 200px;
+    border-radius: 4px;
   }
 }
 
