--- a/docs/index.haml
+++ b/docs/index.haml
@@ -40,8 +40,8 @@ layout: default
       .row
         .col-sm-10.col-sm-offset-1
           %h2.page-section-title Why DocSearch?
-          %p We’re scratching our own itch here. As developers, we spend a lot of time reading documentation, and it isn’t always easy to find the information we need.
-          %p Not blaming anyone here. Building a good search for a documentation is a complex challenge. We happen to have a lot of experience doing that, and we want to share it   with the world. For free.
+          %p We’re kind of scratching our own itch here. As developers, we spend a lot of time reading documentation, and it isn’t always easy to find the information we need.
+          %p No one's to blame, building a good search for a documentation is a complex challenge. We just happen to have a lot of experience doing that, and we want to share it with the world. For free.
   #section_examples.page-section.page-section-dark
     .container
       .row
