chore(css): ensure the menu is wide enough, but no !important here

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,5 +9,7 @@ $color-left-column-bg: #F1F3F5;
 $color-left-column: #555;
 
 $breakpoint-medium: 568px;
-$breakpoint-large: 768px;;
+$breakpoint-large: 768px;
 
+$dropdown-min-width-medium: 400px;
+$dropdown-min-width-large: 600px;
