--- a/docs/index.haml
+++ b/docs/index.haml
@@ -17,6 +17,7 @@ layout: default
         %div.index-container
           %svg.index
             = File.read('img/illus-index.svg')
+          %div.ripple
         %p We’ve created the fastest, easiest way to search within documentation.
         %p And best of all? It’s free!
       %form#join-form{action: '#', method: 'POST'}
