docs(home): fix center

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -10,8 +10,7 @@ layout: default
       %p#top The easiest way to add search to your documentation.
     .jumbotron-left-column
       %div.index-container
-        %svg.index
-          = File.read('img/illus-index.svg')
+        %img.index{:src => "./img/illus-index.svg"}
         %div.ripple
       .spacer30
       .text-center
