chore(form): fixed the form submission JS code

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -16,7 +16,7 @@ layout: default
       .text-center
         %p We’ve created the fastest, easiest way to search within documentation.
         %p  And best of all? It’s FREE.
-    %form#join-form{action: '#', method: 'POST'}
+    %form.join-form{action: '#', method: 'POST'}
       %h3 Get Started. It’s FREE!
       .spacer20
       .input-group
@@ -126,7 +126,7 @@ layout: default
       %p We’ll get back to you within a few hours with everything you need to integrate your new search into your website.
       %p Oh, and did we mention it's FREE? No commitment. No subscription. Everything is on us!
     .spacer30
-    %form#join-form-2{action: '#', method: 'POST'}
+    %form.join-form{action: '#', method: 'POST'}
       .input-group
         %span.input-group-addon
           %i.fa.fa-fw.fa-envelope-o
