--- a/docs/css/_home.scss
+++ b/docs/css/_home.scss
@@ -77,7 +77,7 @@ html, body {
 
 /* JOIN FORM
 // ------------------------- */
-#join-form, #join-form-2 {
+.join-form {
   background: #242E3A;
   display: block;
   width: 400px;
@@ -120,7 +120,7 @@ html, body {
 }
 
 @media (min-width: 1200px) {
-  #join-form {
+  .jumbotron .join-form {
     position: absolute;
     top: 200px;
     right: 120px;
