docs(website): a few CSS & README minor fixes
 - highlight background CSS rules was wrongly configured
 - navbar-header text was black
 - active links had a default black background
 - fixed a few links using references instead of actual links (doesn't
   work once extracted to documentation.md)
 - use absolute image path

--- a/docs/css/_base.scss
+++ b/docs/css/_base.scss
@@ -5,7 +5,7 @@ $headings-font-family: "Raleway";
 $headings-font-weight: 300;
 
 $brand-primary: #1d96c7;
-$code-color: #a3b6cb;
+//$code-color: #a3b6cb;
 
 $text-color: rgba(black, 0.75);
 
