--- a/docs/css/_syntax-highlighting.scss
+++ b/docs/css/_syntax-highlighting.scss
@@ -16,7 +16,7 @@ cyan      #2aa198  strings, numbers
 green     #859900  operators, other keywords
 */
 
-.highlight pre {
+pre.highlight {
     background: #0A1724;
     border: none;
     color: #A3B6CB;
