--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -2,11 +2,12 @@
 layout: default
 ---
 
-<div class="container main-content">
+<div class="container main-content m800 m-l-r-auto">
   <header class="page-header">
     <h1 class="page-title">{{ page.title }}</h1>
   </header>
   <article class="page-content">
     {{ content }}
   </article>
+  <div class="spacer80"></div>
 </div>
