--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,25 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Standard -->
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     <meta name="description" content="{{ site.description }}">
-    <meta content='summary_large_image' name='twitter:card'>
-    <meta content='{{ site.twitter_username }}' name='twitter:site'>
-    <meta content='{{ site.tagline }}' name='twitter:title'>
-    <meta content="{{ site.description }}" name='twitter:description'>
-    <meta content='{{ site.card_image }}' name='twitter:image:src'>
-    <meta content='www.algolia.com' name='twitter:domain'>
-    <!-- /facebook -->
-    <meta content='https://www.algolia.com/' property='og:url'>
-    <meta content='Algolia' property='og:site_name'>
-    <meta content='{{ site.tagline }}' property='og:title'>
-    <meta content="{{ site.description }}" property='og:description'>
-    <meta content='{{ site.card_image }}' property='og:image'>
-    <meta content='{{ site.card_image_width }}' property='og:image:width'>
-    <meta content='{{ site.card_image_height }}' property='og:image:height'>
 
+    <!-- Twitter Card -->
+    <meta name='twitter:card' content='summary_large_image'>
+    <meta name='twitter:site' content='{{ site.twitter_username }}'>
+    <meta name='twitter:title' content='{{ site.tagline }}'>
+    <meta name='twitter:description' content="{{ site.description }}">
+    <meta name='twitter:image:src' content='{{ site.card_image }}'>
+    <meta name='twitter:domain' content='www.algolia.com'>
+    <meta name="twitter:label1" content="Speed">
+    <meta name="twitter:data1" content="Blazzing Fast ⚡⚡⚡">
+    <meta name="twitter:label2" content="Price">
+    <meta name="twitter:data2" content="FREE!">
+
+    <!-- OpenGraph -->
+    <meta property='og:title' content='{{ site.tagline }}'>
+    <meta property='og:site_name' content='Algolia Community'>
+    <meta property='og:url' content='https://www.algolia.com/'>
+    <meta property='og:description' content="{{ site.description }}">
+    <meta property='og:image' content='{{ site.card_image }}'>
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" href="/img/favicon/zeplin-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/img/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/img/favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/img/favicon/favicon-16x16.png" sizes="16x16">
+
+    <!-- Fonts -->
     <link rel="stylesheet" media="screen" href="//fonts.googleapis.com/css?family=Raleway:300,800" />
     <link rel="stylesheet" media="screen" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600" />
+
     <link rel="stylesheet" media="screen" href="{{ "/css/main.css" | prepend: site.baseurl }}" />
     <link rel="stylesheet" media="screen" href="//cdn.jsdelivr.net/fontawesome/4.4.0/css/font-awesome.min.css" />
   </head>
