chore(website): fixed twitter:domain & og:url

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,7 +15,7 @@
     <meta name='twitter:title' content='{{ site.tagline }}'>
     <meta name='twitter:description' content="{{ site.description }}">
     <meta name='twitter:image:src' content='{{ site.card_image }}'>
-    <meta name='twitter:domain' content='www.algolia.com'>
+    <meta name='twitter:domain' content='community.algolia.com'>
     <meta name="twitter:label1" content="Speed">
     <meta name="twitter:data1" content="Blazzing Fast ⚡⚡⚡">
     <meta name="twitter:label2" content="Price">
@@ -24,7 +24,7 @@
     <!-- OpenGraph -->
     <meta property='og:title' content='{{ site.tagline }}'>
     <meta property='og:site_name' content='Algolia Community'>
-    <meta property='og:url' content='https://www.algolia.com/'>
+    <meta property='og:url' content='https://community.algolia.com/docsearch/'>
     <meta property='og:description' content="{{ site.description }}">
     <meta property='og:image' content='{{ site.card_image }}'>
     <meta property="og:locale" content="en_US">
