chore(website): fixed typo

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,7 +17,7 @@
     <meta name='twitter:image:src' content='{{ site.card_image }}'>
     <meta name='twitter:domain' content='community.algolia.com'>
     <meta name="twitter:label1" content="Speed">
-    <meta name="twitter:data1" content="Blazzing Fast ⚡⚡⚡">
+    <meta name="twitter:data1" content="Blazing Fast ⚡⚡⚡">
     <meta name="twitter:label2" content="Price">
     <meta name="twitter:data2" content="FREE!">
 
