chore(docs): favicon

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -31,10 +31,8 @@
     <meta property="og:type" content="website">
 
     <!-- Favicons -->
-    <link rel="icon" type="image/png" href="/img/favicon/zeplin-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/img/favicon/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/img/favicon/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/img/favicon/favicon-16x16.png" sizes="16x16">
+    <!--[if IE]><link rel="shortcut icon" href="{{ "/img/favicon.png" | prepend: site.baseurl }}"><![endif]-->
+    <link rel="icon" href="{{ "/img/favicon.png" | prepend: site.baseurl }}">
 
     <!-- Fonts -->
     <link rel="stylesheet" media="screen" href="//fonts.googleapis.com/css?family=Raleway:300,800" />
