--- a/docs/css/_home.scss
+++ b/docs/css/_home.scss
@@ -62,7 +62,7 @@ html, body {
 // ------------------------- */
 .jumbotron {
   padding-top: 60px;
-  background: #091724 url(../img/header-bg.png) no-repeat center center;
+  background: #091724 url(../img/header-bg.jpg) no-repeat center center;
   background-size: cover;
   margin-bottom: 0;
   .jumbotron-header {
