chore(website): fixes

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -107,12 +107,14 @@ layout: default
               We crawl your documentation pages
             %p We built a website crawler designed to index every section of your documentation.
             %p Just send us the URL of your documentation, and we’ll periodically run the crawler so you’re always up-to-date.
+            .spacer30
           .col-sm-4.how-it-works
             %h3
               %span.how-it-works-number> 2
               We configure your search experience
             %p You don’t need to configure any settings or even have an Algolia account.
-            %p We take of all of this automatically to ensure the best documentation search experience.
+            %p We take care of all of this automatically to ensure the best documentation search experience.
+            .spacer30
           .col-sm-4.how-it-works
             %h3
               %span.how-it-works-number> 3
