--- a/docs/css/_home.scss
+++ b/docs/css/_home.scss
@@ -143,7 +143,7 @@ html, body {
 /* PAGE SECTIONS
 // ------------------------- */
 .page-section {
-  padding: 60px 0;
+  padding: 60px 10px;
   font-size: 18px;
   line-height: 1.6;
   color: #091724;
